# CDJ-BeatBoxer

./: .all-contributorsrc  .env  .gitignore  Binary-Structs.md  CHANGELOG.md  Keyboard-Midi-interactions.md  README.md  build-combined-bin.sh  mise.toml
.github/workflows/: build-binary.yaml
BeatBoxer-Engien/: build.gradle.kts  settings.gradle.kts
BeatBoxer-Engien/src/main/java/com/FerdiStro/: LogUtils.java  Main.java
BeatBoxer-Engien/src/main/java/com/FerdiStro/cdj/: Modifier.java  VirtualDevice.java
BeatBoxer-Engien/src/main/java/com/FerdiStro/drum/: DrumMachine.java  DrumMachineCommand.java  MinimHelper.java
BeatBoxer-Engien/src/main/resources/: log4j2.xml
BeatBoxer-Engien/src/test/java/com/FerdiStro/: TestDrumMachine.java  TestPatternSystem.java
BeatBoxer-Engien/src/test/resources/: pattern_meta_data.json
BeatBoxer-Tui/: Cargo.toml
BeatBoxer-Tui/src/: dev_state.rs  lib.rs  main.rs  mem_test.rs  prod_binary.rs  test_ui.rs
BeatBoxer-Tui/src/app/: FileExplorer.rs  app.rs  buttons.rs  file_explorer.rs  mod.rs
BeatBoxer-Tui/src/app/interactions/: keyboard_interactions.rs  knob.rs  mod.rs
BeatBoxer-Tui/src/app/memory/: memory.rs  mod.rs  objects_main_data.rs  objects_wave_from_data.rs  wave_form_memory.rs
BeatBoxer-Tui/src/app/render/: mod.rs  render.rs  render_buttons_section.rs  render_header_section.rs  render_manage_section.rs  render_render_section.rs  render_utils_section.rs  render_wave_form.rs
doc/src/: architecture.drawio
scripts/: clean_setup.sh  copy-to-ssh-host.sh  fix-network.sh  setup-network.sh  start-up.sh  sync-and-start.sh
(+32 files in other folders)
