[package]
name = "beatboxer-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "prod_binary"
path = "src/prod_binary.rs"

[[bin]]
name = "test_ui"
path = "src/test_ui.rs"

[[bin]]
name = "mem_test"
path = "src/mem_test.rs"

[dependencies]
ratatui = "0.30.0"
color-eyre = "0.6.5"
crossterm = "0.29.0"
memmap2 = "0.9.9"
dotenvy = "0.15"
crossbeam-channel = "0.5.15"
midir = "0.9"
